--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -8,8 +8,8 @@
     --text-color: var(--color-black);
 
 /* ================== font family =====================*/
-    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
-    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 /* ============== fonts sizes =================*/
     --font-size-small: 1.2rem;
@@ -17,6 +17,9 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
 }
 
 
@@ -31,10 +34,12 @@ body {
     color: var(--text-color); 
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
 }
 
 section :is(h1, h2, h3, h4, h5, h6) {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a {
