--- a/0x02-CSS_advanced/styles/9-style.css
+++ b/0x02-CSS_advanced/styles/9-style.css
@@ -8,8 +8,8 @@
     --text-color: var(--color-black);
 
 /* ================== font family =====================*/
-    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
-    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 /* ============== fonts sizes =================*/
     --font-size-small: 1.2rem;
@@ -17,9 +17,16 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+
+/*===============font weight===================*/
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
+
+    /*================line height==================*/
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
 }
-
-
 
 html {
     scroll-behavior: smooth;
@@ -31,14 +38,18 @@ body {
     color: var(--text-color); 
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
 }
 
 section :is(h1, h2, h3, h4, h5, h6) {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a {
    color: var(--text-color);
+   text-decoration: none;
 }
 
 .visually-hidden {
