--- a/0x02-CSS_advanced/styles/12-sttyle.css
+++ b/0x02-CSS_advanced/styles/12-sttyle.css
@@ -30,6 +30,13 @@
 /* ================= Variables for alignments =================*/
     --section-header-align:center;
 
+
+/* ===================Variable for tagline transform===========*/
+    --section-tagline-transform:uppercase;
+
+/*================title margin ================================*/
+    --section-title-margin: 0;
+
 }
 
 html {
@@ -68,6 +75,16 @@ a {
     text-align: var(--section-header-align);
 }
 
+.section-title {
+    font-family:var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight:var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
 .section-tagline {
     background-color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
 }
